Fix video hero z-index ordering (#212)
* Fix video hero z-index ordering

* f

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -4072,12 +4072,13 @@
     img {
         display: block;
         width: 100%;
-        z-index: 0;
+        z-index: 1;
         position: relative;
 
         &.is-hidden {
             opacity: 0;
             display: block !important;
+            z-index: 0;
         }
     }
 
@@ -4092,6 +4093,7 @@
         &.is-hidden {
             opacity: 0;
             display: block !important;
+            z-index: 0;
         }
     }
 }
